# HRDP_beta

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hrdp_actuators/share/hrdp_actuators/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hrdp_actuators_beta/lib/hrdp_actuators_beta/: keyboard_control  objected_k_c  try_this  voice_control
install/hrdp_actuators_beta/share/hrdp_actuators_beta/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hrdp_beta/share/hrdp_beta/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hrdp_beta_actions/share/hrdp_beta_actions/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hrdp_beta_perception/lib/hrdp_beta_perception/: face_detection
install/hrdp_beta_perception/share/hrdp_beta_perception/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hrdp_core_beta/share/hrdp_core_beta/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hrdp_human_interface_beta/lib/hrdp_human_interface_beta/: user_voice_listener
install/hrdp_human_interface_beta/share/hrdp_human_interface_beta/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hrdp_human_interfaces/share/hrdp_human_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hrdp_launch/share/hrdp_launch/: hrdp_sneaker_objectron_launch.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hrdp_perception/lib/hrdp_perception/: face_detection.py
install/hrdp_perception/share/hrdp_perception/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hrdp_perception_beta/lib/hrdp_perception_beta/: face_detection  face_detection_node  gesture_detection  sneakers_objectron
install/hrdp_perception_beta/share/hrdp_perception_beta/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hrdp_sensors/share/hrdp_sensors/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hrdp_sensors_beta/lib/hrdp_sensors_beta/: sensors
install/hrdp_sensors_beta/share/hrdp_sensors_beta/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_cpp_py_pkg/lib/: py_node.py
install/py_pubsub/share/py_pubsub/: package.sh  (+1 more)
log/: latest_build  latest_test
src/hrdp_actuators/: CMakeLists.txt
src/hrdp_actuators_beta/: setup.cfg  setup.py
src/hrdp_beta/: CMakeLists.txt
src/hrdp_beta_actions/: CMakeLists.txt  package.xml
src/hrdp_beta_perception/: setup.cfg  setup.py
src/hrdp_beta_perception/hrdp_beta_perception/: face_detection.py  perception.py
src/hrdp_human_interface_beta/: package.xml  setup.cfg  setup.py
src/hrdp_human_interface_beta/hrdp_human_interface_beta/: home.py
src/hrdp_human_interface_beta/hrdp_human_interface_beta/application_managers/: constant_variables.py  mode.py  utils.py
src/hrdp_human_interface_beta/hrdp_human_interface_beta/nodes/user_voice_listener/: constant_variables.py  main.py  user_voice_listener.py
src/hrdp_human_interface_beta/hrdp_human_interface_beta/organs/: check_microphone_connection.py  ears.py
src/hrdp_human_interfaces/: CMakeLists.txt
src/hrdp_launch/: setup.cfg  setup.py
src/hrdp_perception/: CMakeLists.txt  package.xml
src/hrdp_perception_beta/: package.xml  setup.cfg  setup.py
src/hrdp_perception_beta/hrdp_perception_beta/non_vision/: extended_kalman_filter.py
src/hrdp_perception_beta/hrdp_perception_beta/vision/: face_detection.py  shoe_3d_detection.py
src/hrdp_perception_beta/hrdp_perception_beta/vision/face_detection/: face_detection.py
src/hrdp_perception_beta/hrdp_perception_beta/vision/gesture_detection/: converted_model_transformer_sungsik.tflite  gesture_detection.py  gesture_detection_constants.py  gesture_transformer.py  main.py  rgb_subscriber.py
src/hrdp_perception_beta/hrdp_perception_beta/vision/sample_scripts/: README.md  sample_body_pose_detection.py  sample_face_detection.py  sample_hand_pose_detection.py  sample_shoe_objectron_detection.py
src/hrdp_perception_beta/hrdp_perception_beta/vision/sneakers_objectron/: main.py  sneakers_objectron.py
src/hrdp_sensors/: CMakeLists.txt  package.xml
src/hrdp_sensors_beta/: package.xml  setup.cfg  setup.py
src/hrdp_sensors_beta/hrdp_sensors_beta/: sensors.py
src/hrdp_sensors_beta/hrdp_sensors_beta/camera/: camera_constants.py  d_camera.py  rgb_camera.py  rgbd_camera.py
src/my_cpp_py_pkg/: CMakeLists.txt
src/my_cpp_py_pkg/src/: cpp_node.cpp
src/py_pubsub/: setup.py
(+137 files in other folders)
